# Semester_4_project

./: .env  .env.example  README.md  pyproject.toml
app/: config.py  deps.py  main.py
app/ai/: base.py  fallback_client.py  gemini_client.py  gpt4all_client.py  mock_client.py  openai_client.py  plugin_redact_email.py  plugins.py
app/auth/: router.py  schemas.py  service.py
app/chat/: router.py  schemas.py  service.py
app/feedback/: router.py  schemas.py  service.py
app/genai_chat_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/history/: router.py  schemas.py  service.py
app/models/: conversation.py
app/scripts/: repl.py
app/security/: roles.py  threats.md
tests/: test_auth.py  test_chat.py  test_history.py
